[gd_scene load_steps=8 format=3 uid="uid://cxuuk3exqhijq"]

[ext_resource type="Script" path="res://scripts/title_screen.gd" id="1_qjofd"]
[ext_resource type="Texture2D" uid="uid://cl63x16hivujl" path="res://assets/title_screen/bg.png" id="1_x4ax8"]
[ext_resource type="Texture2D" uid="uid://cww625h6jvwx6" path="res://assets/title_screen/logo_trans.png" id="2_kyu8j"]
[ext_resource type="Theme" uid="uid://c6d6hh4uwham6" path="res://resources/ui_theme.tres" id="4_ocid8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ws2o2"]
bg_color = Color(0.866667, 0.866667, 0.866667, 1)
border_width_bottom = 4
border_color = Color(0.733333, 0.733333, 0.733333, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fhini"]
bg_color = Color(0.8, 0.8, 0.8, 1)
border_color = Color(0.733333, 0.733333, 0.733333, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ljic"]
bg_color = Color(0.933333, 0.933333, 0.933333, 1)
border_width_bottom = 4
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="title_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qjofd")

[node name="bg" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.00235749
texture = ExtResource("1_x4ax8")
expand_mode = 3

[node name="game_logo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -202.0
offset_right = 250.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_kyu8j")
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = 71.0
offset_right = 250.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
alignment = 1

[node name="pvp" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("4_ocid8")
text = "Player vs Player"

[node name="pvia" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("4_ocid8")
text = "Player vs IA"

[node name="quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("4_ocid8")
text = "Quit game"

[node name="easy" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("4_ocid8")
text = "Easy"

[node name="medium" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("4_ocid8")
text = "Medium"

[node name="hard" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("4_ocid8")
text = "Hard"

[node name="impossible" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("4_ocid8")
text = "Impossible (may cause slowdowns)"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 4

[node name="back" type="Button" parent="VBoxContainer/MarginContainer"]
visible = false
layout_mode = 2
theme = ExtResource("4_ocid8")
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_ws2o2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fhini")
theme_override_styles/normal = SubResource("StyleBoxFlat_4ljic")
text = "Back"

[connection signal="pressed" from="VBoxContainer/pvp" to="." method="_on_pvp_pressed"]
[connection signal="pressed" from="VBoxContainer/pvia" to="." method="_on_pvia_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="VBoxContainer/easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="VBoxContainer/medium" to="." method="_on_medium_pressed"]
[connection signal="pressed" from="VBoxContainer/hard" to="." method="_on_hard_pressed"]
[connection signal="pressed" from="VBoxContainer/impossible" to="." method="_on_impossible_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/back" to="." method="_on_back_pressed"]
